8/15/2006 - jdiamond
====================

 * (trac #108) Expanded the valid range of area code's and country code's from 3 digits to 6 digits

8/13/2006 - jdiamond
====================

 * Fixed some of the Portuguese translation

8/10/2006 - jdiamond
====================

 * Fixed a "blank query" bug in the installer
 * (trac #106) Fixed a bug that prevented taxes from being calculated for orders

8/8/2006 - jdiamond
====================

 * (trac #105) Added restrictions to the Order interface to prevent it from functioning when there are no
   services configured or no payment methods enabled.
 * (trac #103) Added code to include setup fee's in the Paypal cart upload

8/5/2006 - jdiamond
====================

 * (trac #102) Fixed a bug in manager_content.tpl that was causing manager pages to
   show up blank in IE.
 * (trac #101) Enabled check/money order payments for the order interface.

8/1/2006 - jdiamond
====================

 * (trac #93) Fixed a multiple error-message bug for Access Denied pages
 * (trac #96) Added Fulfilled Orders page
 * (trac #92) Fixed a bug preventing you from scrolling the server IP list
 * (trac #95) Added checks for blank domain fields in the Order interface
 * (trac #97) Domain contact box no longer shows up when there are no domains in the order
 * (trac #98) Made asthetic improvements to the shopping cart on the review page
 * (trac #90) Added a check for no domain service and no hosting services to the
              add domain / add hosting pages of the order interface

7/31/2006 - jdiamond
====================

 * (trac #94) Fixed reseller club debug flag bug
 * (trac #91) Added a subject field to the invoice email page

7/30/2006 - jdiamond
====================

 * Fixed several bugs in the Manager & Order interfaces that were located during testing
 * Expanded the 'username' field from 10 characters to 32
 * (trac #13) - Made the page loader more efficient by only loading the class file for the page being requested
