@@ -1,3 +1,8 @@
+8/18/2006 - jdiamond
+====================
+
+ * Fixed an browser compatibility issue in the Order interface
+
 8/15/2006 - jdiamond
 ====================
 
